--- a/style.css
+++ b/style.css
@@ -70,35 +70,33 @@ html {
 
 /* -- WHATS ICON -- */
 /* NAV */
- .nav-box {
+.nav-box {
     z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
-    background-color:transparent;
+    background-color: var(--cor-1);
     height: 80px;
     width: 100vw;
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    
-}
-
- nav {
-    min-width: 560px;
-    width: 50%;
-    max-width: 800px;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--cor-1);
-    border-radius: 0 0px 20px 20px;
+    align-items: center;
+    justify-content: center; 
     box-shadow: 0px 3px 20px 0px var(--cor-3);
+}
+nav {
+    height: 100%;
+    width: 70%;
+    min-width: 550px;
+    max-width: 1000px;
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--cor-1);
  }
 
  .left-nav {
     height: 100%;
     width: 20%;
+    min-width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,41 +104,42 @@ html {
     .logo-nav {
         height: 70px;
     }
-
  .right-nav {
     height: 100%;
     width: 80%;
-    margin-right: 20px;
+    min-width: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
     .right-nav-box {
         height: 100%;
-        width: 100%;
+        width: 500px;
         display: flex;
         align-items: center;
         justify-content: flex-end;
         gap: 5px;
     }
-
-    .right-nav-item {
-        list-style: none;
-    }
-        .right-nav-item > a, .right-nav-item > a:visited {
-            display: inline-block;
-            text-decoration: none;
-            color: var(--cor-3);
-            font-size: var(--normal-t);
-            padding: 10px;
-            transition: var(--normal-t);
+        .right-nav-item {
+            list-style: none;
         }
-            .right-nav-item > a:hover {
-                transition: var(--hover-t);
-                transform: scale(1.2);
+            .right-nav-item > a, .right-nav-item > a:visited {
+                display: inline-block;
+                text-decoration: none;
+                color: var(--cor-3);
+                font-size: var(--normal-t);
+                font-weight: bold;
+                padding: 10px;
+                transition: var(--normal-t);
+                box-sizing: border-box;
             }
-
-            .right-nav-item > a:active {
-                transform: scale(.9);
-            }
-
+                .right-nav-item > a:hover {
+                    transition: var(--hover-t);
+                    transform: scale(1.2);
+                }
+                .right-nav-item > a:active {
+                    transform: scale(.9);
+                }
 /* FIM NAV */
 /* SEC 1 */ 
 #sec1 {
@@ -220,18 +219,140 @@ html {
                 font-weight: 800;
             }
 /* FIM SEC 1 */ 
-/* SEC 2 */ 
+/* SEC 2 */
 #sec2 {
-    width: 100vw;
     height: 100vh;
-    background-image: url("/assets/imgs/wapp-solar.jpg");
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-
+    width: 100vw;
+    background-color: black;
 }
-/* FIM SEC 2 */ 
+/* FIM SEC 2 */
+/*--- SEC 5 ---*/
+#sec5 {
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--cor-1);
+    display: flex;
+    justify-content: center;
+}
 
+.content-sec5 {
+    background-color: var(--cor-3);
+    height: 100%;
+    width: 500px;
+    color: var(--cor-1);
+}
+
+.box-content-sec5:nth-child(1) {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+}
+    .box-content-sec5:nth-child(1)::after {
+        content: "";
+        position: absolute;
+        background-color: var(--cor-1);
+        height: 2px;
+        width: 90%;
+        bottom: -10%;
+    }
+.box-content-sec5:nth-child(1) h3 {
+    font-size: 25px;
+    color: var(--cor-1);
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.box-content-sec5:nth-child(1) p {
+    font-size: 20px;
+    color: var(--cor-1);
+    text-align: center;
+    text-transform: uppercase;
+}
+.box-content-sec5:nth-child(2) {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}    
+    .box-content-sec5:nth-child(2) > form {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        justify-content: center;
+    }
+        .box-content-sec5:nth-child(2) .input-item {
+            width: 60%;  
+            height: 40px;
+            padding: 10px;     
+            border: 1px solid var(--cor-1);      
+            border-radius: 5px;
+            outline: none;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+            .box-content-sec5:nth-child(2) .input-item:focus {
+                box-shadow: 2px 0px 30px -5px var(--cor-1);
+            }
+        .box-content-sec5:nth-child(2) .form-btn {
+            width: 60%;  
+            height: 40px;
+            padding: 15px;     
+            margin-top: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: var(--normal-t);
+            font-weight: bolder;
+            border-radius: 5px;
+            border: transparent;
+        }
+            .box-content-sec5:nth-child(2) .form-btn:hover {
+                transform: scale(1.05);
+                transition: var(--hover-t);
+                border: none;
+            }
+.box-content-sec5:nth-child(3) {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    position: relative;
+}
+
+    .box-content-sec5:nth-child(3)::before {
+        content: "";
+        position: absolute;
+        background-color: var(--color-1);
+        height: 2px;
+        width: 90%;
+        top: -10px;
+    }
+    .box-content-sec5:nth-child(3) > a > img {
+        margin-top: 20px;
+        height: 70px;
+        transition:var(--time-1);
+    }
+        .box-content-sec5:nth-child(3) > a > img:hover {
+            height: 90px;
+            transition: var(--time-2);
+        }
+
+
+    #sec5 a,  #sec5 a:visited {
+        color: var(--cor-2);
+    }
+/*--- FIM SEC 5 ---*/
 
 @media (max-height: 700px){
     .content-box-sec1 {
