--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@
         --normal-t : all 1s;
 
 }
-
 /*---- SCROLL -----*/
 body::-webkit-scrollbar {
     width: 12px; 
@@ -33,27 +32,23 @@ body::-webkit-scrollbar-thumb {
     border: 3px solid var(--cor-1); 
 }
 /*---- FIM SCROLL -----*/
-
 /* Resets */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Montserrat',Arial, Helvetica, sans-serif;
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
 }
-
 html {
     scroll-behavior: smooth;
 }
 
 /* -- WHATS ICON -- */
-
 .whatsapp-butoon {
     height: 100px;
     width: 100px;
@@ -61,13 +56,11 @@ html {
     bottom: 20px;
     right: 20px;
 }
-
 .whatsapp-butoon > a > img {
     height: 100px;
     width: 100px;
     border-radius: 20px;
 }
-
 /* -- WHATS ICON -- */
 /* NAV */
 .nav-box {
@@ -86,16 +79,15 @@ html {
 nav {
     height: 100%;
     width: 70%;
-    min-width: 550px;
-    max-width: 1000px;
+    min-width: 400px;
+    max-width: 800px;
     display: flex;
     justify-content: space-around;
     background-color: var(--cor-1);
  }
-
  .left-nav {
     height: 100%;
-    width: 20%;
+    width: 10%;
     min-width: 100px;
     display: flex;
     justify-content: center;
@@ -106,8 +98,8 @@ nav {
     }
  .right-nav {
     height: 100%;
-    width: 80%;
-    min-width: 450px;
+    width: 90%;
+    min-width: 500px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -132,13 +124,14 @@ nav {
                 padding: 10px;
                 transition: var(--normal-t);
                 box-sizing: border-box;
+                text-transform: uppercase;
             }
                 .right-nav-item > a:hover {
                     transition: var(--hover-t);
-                    transform: scale(1.2);
+                    transform: scale(1.1);
                 }
                 .right-nav-item > a:active {
-                    transform: scale(.9);
+                    transform: scale(1);
                 }
 /* FIM NAV */
 /* SEC 1 */ 
@@ -153,7 +146,6 @@ nav {
     align-items: center;
     justify-content: center;
 }
-
 .content-box-sec1 {
     height: 500px;
     width: 500px;
@@ -174,8 +166,6 @@ nav {
         .logo-content-box img{
             height: 200px;
         }
-
-
     .content-sec1 {
         width: 100%;
         height: 55%;
@@ -211,7 +201,6 @@ nav {
             align-items: flex-start;
             justify-content: center;
         }
-
             .content-sec1-btn a, .content-sec1-btn a:visited  {
                 font-size: 25px;
                 text-decoration: none;
@@ -234,14 +223,12 @@ nav {
     display: flex;
     justify-content: center;
 }
-
 .content-sec5 {
     background-color: var(--cor-3);
     height: 100%;
     width: 500px;
     color: var(--cor-1);
 }
-
 .box-content-sec5:nth-child(1) {
     width: 100%;
     height: 30%;
@@ -329,7 +316,6 @@ nav {
     gap: 20px;
     position: relative;
 }
-
     .box-content-sec5:nth-child(3)::before {
         content: "";
         position: absolute;
@@ -347,8 +333,6 @@ nav {
             height: 90px;
             transition: var(--time-2);
         }
-
-
     #sec5 a,  #sec5 a:visited {
         color: var(--cor-2);
     }
