--- a/style.css
+++ b/style.css
@@ -63,77 +63,46 @@ html {
 }
 /* -- WHATS ICON -- */
 /* NAV */
-.nav-box {
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--cor-1);
-    height: 80px;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    box-shadow: 0px 3px 20px 0px var(--cor-3);
-}
-nav {
-    height: 100%;
-    width: 70%;
-    min-width: 400px;
-    max-width: 800px;
-    display: flex;
-    justify-content: space-around;
-    background-color: var(--cor-1);
- }
- .left-nav {
-    height: 100%;
-    width: 10%;
-    min-width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
-    .logo-nav {
-        height: 70px;
-    }
- .right-nav {
-    height: 100%;
-    width: 90%;
-    min-width: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-    .right-nav-box {
-        height: 100%;
-        width: 500px;
+    .nav-box {
+        z-index: 2;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: var(--cor-1);
+        height: 80px;
+        width: 100vw;
         display: flex;
         align-items: center;
-        justify-content: flex-end;
-        gap: 5px;
+        justify-content: space-around;
+        box-shadow: 0px 3px 20px 0px var(--cor-3);
     }
-        .right-nav-item {
+        .nav-box-itens {
+            display: flex;
             list-style: none;
         }
-            .right-nav-item > a, .right-nav-item > a:visited {
-                display: inline-block;
-                text-decoration: none;
-                color: var(--cor-3);
-                font-size: var(--normal-t);
-                font-weight: bold;
-                padding: 10px;
-                transition: var(--normal-t);
-                box-sizing: border-box;
-                text-transform: uppercase;
+            .logo-nav {
+                height: 70px;
             }
-                .right-nav-item > a:hover {
-                    transition: var(--hover-t);
-                    transform: scale(1.1);
+                .right-nav-item > a, .right-nav-item > a:visited {
+                    display: inline-block;
+                    text-decoration: none;
+                    color: var(--cor-3);
+                    font-size: var(--normal-t);
+                    font-weight: bold;
+                    transition: var(--normal-t);
+                    box-sizing: border-box;
+                    text-transform: uppercase;
+                    padding: 10px;
                 }
-                .right-nav-item > a:active {
-                    transform: scale(1);
-                }
+                    .right-nav-item > a:hover {
+                        transition: var(--hover-t);
+                        transform: scale(1.1);
+                    }
+                    .right-nav-item > a:active {
+                        transform: scale(1);
+                    }           
 /* FIM NAV */
+
 /* SEC 1 */ 
 #sec1 {
     width: 100vw;
