--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
         --big : 1.5em;
 
     /* Transitions */
-        --hover-t : all .2s;
-        --normal-t : all 1s;
-
+        --hover-t : transform .2s;
+        --normal-t : transform 1s;
+        --time-2 : all .5s;
 }
 /*---- SCROLL -----*/
 body::-webkit-scrollbar {
@@ -63,6 +63,9 @@ html {
 }
 /* -- WHATS ICON -- */
 /* NAV */
+    .nav-btn {
+        display: none;
+    }
     .nav-box {
         z-index: 2;
         position: absolute;
@@ -312,4 +315,77 @@ html {
         transform: scale(.7);
         margin-top: 80px;
     }
+}
+
+@media (max-width: 700px) {
+
+    .nav-btn {
+        display: flex;
+        gap: 5px;
+        padding: 10px;
+        border: none;
+        background-color: transparent;
+        color: var(--cor-3);
+    }
+    .btn-nav-icon {
+        border-top: 2px solid currentColor;
+        width: 30px;
+        transition: var(--time-2);
+    }
+    .btn-nav-icon::after, .btn-nav-icon::before {
+        content: "";
+        width: 30px;
+        height: 2px;
+        background-color: currentColor;
+        display: block;
+        margin-top: 10px;
+        transition: var(--time-2);
+    }
+
+    .active .btn-nav-icon::before {
+        position: absolute;
+        transition: var(--time-2);
+        transform: rotate(-135deg);
+    }
+    
+    .active .btn-nav-icon::after {
+        position: absolute;
+        transition: var(--time-2);
+        transform: rotate(135deg);
+    } 
+    
+    .active .btn-nav-icon {
+        border: transparent;
+        margin-bottom: 51%;
+        transition: var(--time-2);
+        transform: scale(1.2);
+    }
+    /* */
+    .nav-box-itens {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        position: absolute;
+        width: 100%;
+        right: 0;
+        top: 80px;
+        height: 0;
+        background-color: var(--cor-1);
+        transition: all .5s;
+        visibility: hidden;
+        overflow: hidden;
+    }
+    #nav.active .nav-box-itens {
+        height: 30vh;
+        visibility: visible;
+    }
+
+    /* NAV */
+
+    .content-box-sec1 {
+        transform: scale(.8);
+        margin-top: 80px;
+    }
+
 }
