--- a/style.css
+++ b/style.css
@@ -105,217 +105,116 @@ html {
                         transform: scale(1);
                     }           
 /* FIM NAV */
-
 /* SEC 1 */ 
-#sec1 {
-    width: 100vw;
-    height: 100vh;
-    background-image: url("assets/imgs/wapp-solar.jpg");
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+img {
+    max-width: 100%;
+    display: block;
 }
-.content-box-sec1 {
-    height: 500px;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.815);
-}
-    .logo-content-box {
-        width: 100%;
-        height: 45%;
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-    }
-        .logo-content-box img{
-            height: 200px;
-        }
-    .content-sec1 {
-        width: 100%;
-        height: 55%;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        text-transform: uppercase;
-    }
-        .content-sec1-text {
-            height: 70%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-            .content-sec1-text h1 {
-                font-size: 40px;
-                font-weight: 500;
-            }
-                .content-sec1-text .dest-sun {
-                    font-weight: 800;
-                }
 
-                .content-sec1-text .dest-energy {
-                    background-color: var(--cor-3);
-                    padding: 5px;
-                    color: var(--cor-1);
-                }
-        .content-sec1-btn {
-            height: 30%;
-            width: 100%;
-            display: flex;
-            align-items: flex-start;
-            justify-content: center;
-        }
-            .content-sec1-btn a, .content-sec1-btn a:visited  {
-                font-size: 25px;
-                text-decoration: none;
-                color: var(--cor-2);
-                font-weight: 800;
-            }
-/* FIM SEC 1 */ 
-/* SEC 2 */
-#sec2 {
-    height: 100vh;
-    width: 100vw;
-    background-color: black;
+.slide {
+    max-width: 380px;
+    margin: 20px auto;
+    display: grid;
 }
-/* FIM SEC 2 */
-/*--- SEC 5 ---*/
-#sec5 {
-    height: 100vh;
-    width: 100vw;
-    background-color: var(--cor-1);
-    display: flex;
-    justify-content: center;
-}
-.content-sec5 {
-    background-color: var(--cor-3);
-    height: 100%;
-    width: 500px;
-    color: var(--cor-1);
-}
-.box-content-sec5:nth-child(1) {
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    position: relative;
-}
-    .box-content-sec5:nth-child(1)::after {
-        content: "";
-        position: absolute;
-        background-color: var(--cor-1);
-        height: 2px;
-        width: 90%;
-        bottom: -10%;
-    }
-.box-content-sec5:nth-child(1) h3 {
-    font-size: 25px;
-    color: var(--cor-1);
-    margin-bottom: 10px;
-    text-transform: uppercase;
-}
-.box-content-sec5:nth-child(1) p {
-    font-size: 20px;
-    color: var(--cor-1);
-    text-align: center;
-    text-transform: uppercase;
-}
-.box-content-sec5:nth-child(2) {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}    
-    .box-content-sec5:nth-child(2) > form {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-        justify-content: center;
-    }
-        .box-content-sec5:nth-child(2) .input-item {
-            width: 60%;  
-            height: 40px;
-            padding: 10px;     
-            border: 1px solid var(--cor-1);      
-            border-radius: 5px;
-            outline: none;
-            font-weight: bold;
-            border-radius: 5px;
-        }
-            .box-content-sec5:nth-child(2) .input-item:focus {
-                box-shadow: 2px 0px 30px -5px var(--cor-1);
-            }
-        .box-content-sec5:nth-child(2) .form-btn {
-            width: 60%;  
-            height: 40px;
-            padding: 15px;     
-            margin-top: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: var(--normal-t);
-            font-weight: bolder;
-            border-radius: 5px;
-            border: transparent;
-        }
-            .box-content-sec5:nth-child(2) .form-btn:hover {
-                transform: scale(1.05);
-                transition: var(--hover-t);
-                border: none;
-            }
-.box-content-sec5:nth-child(3) {
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 20px;
-    position: relative;
-}
-    .box-content-sec5:nth-child(3)::before {
-        content: "";
-        position: absolute;
-        background-color: var(--color-1);
-        height: 2px;
-        width: 90%;
-        top: -10px;
-    }
-    .box-content-sec5:nth-child(3) > a > img {
-        margin-top: 20px;
-        height: 70px;
-        transition:var(--time-1);
-    }
-        .box-content-sec5:nth-child(3) > a > img:hover {
-            height: 90px;
-            transition: var(--time-2);
-        }
-    #sec5 a,  #sec5 a:visited {
-        color: var(--cor-2);
-    }
-/*--- FIM SEC 5 ---*/
 
-@media (max-height: 700px){
-    .content-box-sec1 {
-        transform: scale(.7);
-        margin-top: 80px;
+.slide-itens {
+    position: relative;
+    grid-area: 1/1;
+}
+
+.slide-nav {
+    grid-area: 1/1;
+    z-index: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 98% 1fr;
+}
+
+
+.slide-itens > * {
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.slide-itens > .active {
+    opacity: 1;
+    pointer-events: initial;
+    position: relative;
+}
+
+.slide-nav button {
+    -webkit-appearance: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border: none;
+}
+
+.slide-nav button img {
+    height: 50px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.slide-next {
+    justify-content: flex-end !important;
+}
+
+p {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    background-color: rebeccapurple;
+    padding: 10px;
+    transition: all 1s;
+}
+
+.active p {
+    opacity: 1;
+    right: 50%;
+
+}
+
+.slide-thumb {
+    display: flex;
+    grid-column: 1 / 3;
+}
+
+.slide-thumb > span {
+    flex: 1;
+    display: block;
+    height: 3px;
+    background-color: rgba(0, 0, 0, 0.4);
+    margin: 5px;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+
+.slide-thumb > span.active {
+}
+
+.slide-thumb > span.active::after {
+    content: "";
+    display: block;
+    height: inherit;
+    background-color: rgba(255, 255, 255, 0.9);
+    transform: translateX(-100%);
+    animation: translateX-Animatio 5s forwards linear;
+}
+
+@keyframes translateX-Animatio {
+    to {
+        transform: initial;
     }
 }
+/* FIM SEC 1 */
+
 
 @media (max-width: 700px) {
 
@@ -377,15 +276,8 @@ html {
         overflow: hidden;
     }
     #nav.active .nav-box-itens {
-        height: 30vh;
+        height: 400px;
         visibility: visible;
     }
-
     /* NAV */
-
-    .content-box-sec1 {
-        transform: scale(.8);
-        margin-top: 80px;
-    }
-
 }
