--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ html {
 
 /* -- WHATS ICON -- */
 .whatsapp-butoon {
+    z-index: 2;
     height: 100px;
     width: 100px;
     position: fixed;
@@ -74,7 +75,7 @@ html {
         display: none;
     }
     .nav-box {
-        z-index: 5;
+        z-index: 2;
         position: absolute;
         top: 0;
         left: 0;
@@ -143,7 +144,7 @@ html {
 }
 .slide-nav {
     grid-area: 1/1;
-    z-index: 2;
+    z-index: 1;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 98% 1fr;
@@ -281,6 +282,11 @@ html {
         }
 /* */
 /* FIM SEC 1 */
+
+#sec2 {
+    height: 100vh;
+    width: 100vw;
+}
 
 @media (max-width: 800px) {
 
