--- a/style.css
+++ b/style.css
@@ -115,29 +115,28 @@ html {
 /* FIM NAV */
 /* SEC 1 */ 
 .slide {
+    margin-top: 79px;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 79px) ;
     display: grid;
-    overflow-x: hidden;
-}
-.img-box {
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
 }
     .img-box-1 {
-        background-image: url("./assets/imgs/solar1.jpg");
+        background-image: url("./assets/imgs/solar1.png");
     }
     .img-box-2 {
-        background-image: url("./assets/imgs/solar2.jpg");
+        background-image: url("./assets/imgs/solar2.png");
+        
     }
     .img-box-3 {
-        background-image: url("./assets/imgs/solar3.jpg");
+        background-image: url("./assets/imgs/solar3.png");
     }
-    .img-box-4 {
-        background-image: url("./assets/imgs/solar4.jpg");
+    .img-box {
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 .slide-itens {
     position: relative;
@@ -199,88 +198,63 @@ html {
     animation: translateX-Animatio 10s forwards linear;
 }
 /* TEXT SLIDE 1 */
-.text-slide1 {
+.text-slide {
     position: absolute;
     top: 20%;
     left: 10%;
-    padding: 10px;
-    height: 200px;
-    width: 600px;
     opacity: 0;
     transform: translateX(50%);
     transition: all 1s;
+    text-transform: uppercase;
+    line-height: 32px;
 }
-.active .text-slide1 {
+.active .text-slide {
     opacity: 1;
     transform: translateX(0%);
 }
     .slide1-text1 {
-        background-color: var(--cor-3);
-        font-size: 40px;
-        padding: 10px;
-        color: var(--cor-1);
+        background-color: var(--cor-4);
+        font-size: 30px;
+        color: white;
+        padding: 0 10px;
     }
     .slide1-text2 {
-        background-color: var(--cor-3);
-        display: block;
-        font-size: 70px;
-        padding: 10px;
-        color: var(--cor-1);
-        margin-top: 20px;
+        background-color: var(--cor-4);
+        font-size: 40px;
+        color: white;
+        padding: 0 10px;
+        font-weight: 900;
     }
 /* SLIDE 2 */
-.text-slide2 {
+.text-slide3 {
     position: absolute;
-    top: 20%;
-    left: 5%;
-    padding: 10px;
-    height: 200px;
-    width: 100%;
-    margin-left: 100px;
+    bottom: 30%;
+    left: 10%;
+    opacity: 0;
+    transform: translateX(50%);
+    transition: all 1s;
+    text-transform: uppercase;
+    line-height: 32px;
 }
-    .slide2-text1, .slide2-text4{
-        color: var(--cor-1);
-        background-color: var(--cor-5);
-        display: inline-block;
-        font-size: 30px;
-        padding: 10px;
-        margin: 5px;
-        opacity: 0;
-        transform: translateX(50%);
-    }
-    .slide2-text2, .slide2-text3 {
-        color: var(--cor-1);
-        background-color: var(--cor-5);
-        display: inline-block;
-        font-size: 20px;
-        padding: 10px;
-        margin: 3px;
-        opacity: 0;
-        transform: translateX(50%);
-    }
-        .active .slide2-text1 {
-            opacity: 1;
-            transform: translateX(0%);
-            transition: all 1s;
-        }
-        .active .slide2-text2 {
-            opacity: 1;
-            transform: translateX(0%);
-            transition: all 1s;
-            transition-delay: 1s;
-        }
-        .active .slide2-text3 {
-            opacity: 1;
-            transform: translateX(0%);
-            transition: all 1s;
-            transition-delay: 1.2s;
-        }
-        .active .slide2-text4 {
-            opacity: 1;
-            transform: translateX(0%);
-            transition: all 1s;
-            transition-delay: 1.7s;
-        }
+
+.active .text-slide3 {
+    opacity: 1;
+    transform: translateX(0%);
+}
+
+.text-slide3 .slide1-text1 {
+    background-color: var(--cor-5);
+    font-size: 30px;
+    color: white;
+    padding: 0 10px;
+}
+.text-slide3 .slide1-text2 {
+    background-color: var(--cor-5);
+    font-size: 40px;
+    color: white;
+    padding: 0 10px;
+    font-weight: 900;
+}
 /* */
 /* FIM SEC 1 */
 
@@ -364,10 +338,16 @@ html {
     }
     /* NAV */
     /* SEC 1 */
+    .slide {
+        width: 100vw;
+        height: 300px;
+        display: grid;
+    }
     .slide-nav button img {
        opacity: 0;
     }
     /* TEXT SLIDE 1 */
+
 .text-slide1 {
     height: 200px;
     width: 280px;
@@ -380,7 +360,7 @@ html {
     }
 /* SLIDE 2 */
 .text-slide2 {
-    top: 20%;
+    top: 50%;
     left: 0%;
     height: 200px;
     width: 100%;
