v att test sec1 position

--- a/style.css
+++ b/style.css
@@ -224,6 +224,8 @@ html {
         color: white;
         padding: 0 10px;
         font-weight: 900;
+        margin-left: 5px;
+
     }
 /* SLIDE 2 */
 .text-slide3 {
@@ -254,6 +256,8 @@ html {
     color: white;
     padding: 0 10px;
     font-weight: 900;
+    margin-left: 5px;
+
 }
 /* */
 /* FIM SEC 1 */
