--- a/style.css
+++ b/style.css
@@ -38,6 +38,15 @@ body::-webkit-scrollbar-thumb {
         transform: initial;
     }
 }
+
+@keyframes whatsapp-animation {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
 /*---- FIM Key Frames animations ----*/
 /* Resets */
 * {
@@ -62,8 +71,9 @@ html {
     height: 100px;
     width: 100px;
     position: fixed;
-    bottom: 20px;
+    bottom: 25px;
     right: 20px;
+    animation: whatsapp-animation 1s infinite alternate-reverse;
 }
 .whatsapp-butoon > a > img {
     height: 100px;
@@ -72,6 +82,10 @@ html {
 }
 /* -- WHATS ICON -- */
 /* NAV */
+    .item-nav {
+        font-weight: 500 !important;
+        font-style: normal !important;
+    }
     .nav-btn {
         display: none;
     }
@@ -203,21 +217,19 @@ html {
     position: absolute;
     top: 20%;
     left: 10%;
-    opacity: 0;
-    transform: translateX(50%);
-    transition: all 1s;
+    width: 100%;
     text-transform: uppercase;
     line-height: 32px;
-}
-.active .text-slide {
-    opacity: 1;
-    transform: translateX(0%);
 }
     .slide1-text1 {
         background-color: var(--cor-4);
         font-size: 25px;
         color: white;
         padding: 0 10px;
+
+        margin-left: 200px;
+        opacity: 0;
+        transition: all 1s;
     }
     .slide1-text2 {
         background-color: var(--cor-4);
@@ -225,33 +237,31 @@ html {
         color: white;
         padding: 0 10px;
         font-weight: 900;
-        margin-left: 5px;
+
+        margin-left: 200px;
+        opacity: 0;
+        transition: all 1s;
+        transition-delay: 1s;
     }
+    .active .slide1-text1 {
+        opacity: 1;
+        margin-left: 0;
+
+    }
+    .active .slide1-text2 {
+        opacity: 1;
+        margin-left: 5px;
+
+    }   
 /* SLIDE 3 */
 .text-slide3 {
     position: absolute;
     bottom: 30%;
     left: 10%;
-    opacity: 0;
-    transform: translateX(50%);
-    transition: all 1s;
     text-transform: uppercase;
     line-height: 32px;
 }
 
-.active .text-slide3 {
-    opacity: 1;
-    transform: translateX(0%);
-}
-
-.text-slide3 .slide1-text1 {
-    background-color: var(--cor-5);
-    font-size: 30px;
-    color: white;
-    padding: 0 10px;
-    margin-left: 5px;
-    letter-spacing: 2px;
-}
 .text-slide3 .slide1-text2 {
     background-color: var(--cor-5);
     font-size: 35px;
@@ -259,14 +269,81 @@ html {
     padding: 0 10px;
     font-weight: 900;
 
+    margin-left: 200px;
+    opacity: 0;
+    transition: all 1s;
 }
-/* */
-/* FIM SEC 1 */
+.text-slide3 .slide1-text1 {
+    background-color: var(--cor-5);
+    font-size: 30px;
+    color: white;
+    padding: 0 10px;
+    margin-left: 5px;
+    letter-spacing: 2px;
+    
+    margin-left: 200px;
+    opacity: 0;
+    transition: all 1s;
+    transition-delay: 1s;
+}
 
+.active .text-slide3 .slide1-text2 {
+    opacity: 1;
+    margin-left: 0;
+
+}
+.active .text-slide3 .slide1-text1 {
+    opacity: 1;
+    margin-left: 5px;
+}
+/* FIM SEC 1 */
+/* SEC 2 */
 #sec2 {
+    height: 350px;
+    width: 100vw;
+    background-color: var(--cor-3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+    .text-box-sec2 {
+        height: 20%;
+        width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        color: var(--cor-1);
+        text-transform: uppercase;
+    }
+
+        .text-box-sec2 h2 {
+            background-color: var(--cor-1);
+            color: var(--cor-3);
+            padding: 10px;
+            border-radius: 15px;
+        }
+
+    .card-box-sec2 {
+        height: 80%;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+    }
+        .card-box-sec2 > img {
+            height: 200px;
+        }
+/* FIM SEC 2 */
+/* SEC 3 */
+#sec3 {
     height: 100vh;
     width: 100vw;
+    background-color: var(--cor-1);
 }
+/* FIM SEC 3 */
 
 @media (max-width: 800px) {
     /* -- WHATS ICON -- */
@@ -336,6 +413,7 @@ html {
         transition: all .5s;
         visibility: hidden;
         overflow: hidden;
+       
     }
     #nav.active .nav-box-itens {
         height: 400px;
@@ -378,4 +456,21 @@ html {
 }
 /* */
     /* FIM SEC 1 */
+    /* SEC 2 */
+#sec2 {
+    height: 900px;
+}
+    .text-box-sec2 {
+        width: 90%;
+        align-items: center;
+    }
+        .text-box-sec2 h2 {
+            text-align: center;
+        }
+
+    .card-box-sec2 {
+        flex-direction: column;
+        gap: 30px;
+    }
+/* FIM SEC 2 */
 }
