--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ html {
 /* FIM SEC 1 */
 /* SEC 2 */
 #sec2 {
-    height: 350px;
+    height: 650px;
     width: 100vw;
     background-color: var(--cor-3);
     display: flex;
@@ -321,8 +321,8 @@ html {
             color: var(--cor-3);
             padding: 10px;
             border-radius: 15px;
+            font-size: 3vw;
         }
-
     .card-box-sec2 {
         height: 80%;
         width: 100%;
@@ -333,23 +333,25 @@ html {
         gap: 50px;
     }
         .card-box-sec2 > img {
-            height: 200px;
+            height: 20vw;
+            min-height: 300px;
         }
 /* --- init hidden --- */
 .init-hidden {
     opacity: 0;
     transform: translateX(50px); 
+    transition: all 1s;
 }
 .init-hidden-1 {
-    transition: all 1s;
+    transition: all 1s !important;
 }
 .init-hidden-2 {
     transition: all 1s;
-    transition-delay: .5s;
+    transition-delay: .5s !important;
 }
 .init-hidden-3 {
     transition: all 1s;
-    transition-delay: 1s;
+    transition-delay: 1s !important;
 }
 .init-hidden-off {
     opacity: 1;
@@ -360,11 +362,90 @@ html {
 #sec3 {
     height: 100vh;
     width: 100vw;
-    background-color: var(--cor-1);
+    background-image: url('./assets/imgs/grama.png');
+    background-repeat: no-repeat;
+    background-size: 60%;
+    background-position: bottom left;
+    display: flex;
 }
-/* FIM SEC 3 */
 
-@media (max-width: 800px) {
+.left-side-sec3 {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+    .left-side-sec3 h3 {
+        font-size: 6vw;
+        text-transform: uppercase;
+        text-align: center;
+        color: var(--cor-1);
+        background-color: var(--cor-5);
+        margin-top: 5%;
+        margin-left: 10%;  
+        padding: 0px 4.8vw;  
+    }
+    .left-side-sec3 h4 {
+        margin-right: 45px;
+        font-size: 5vw;
+        text-transform: uppercase;
+        line-height: 1em;
+        margin-left: 10%;
+        color: var(--cor-3);
+    }
+.right-side-sec3 {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.class-span-right-2 img {
+    height: 6vw;
+}
+
+.right-side-sec3-box {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    color: var(--cor-3);
+    font-weight: 500;
+    font-size: 2.5vw;
+    line-height: 2vw;
+    margin-right: 10%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+    .class-span-right-3 {
+        font-weight: 700;
+    }
+
+    .class-span-right-1, .class-span-right-4 {
+        font-size: 8vw;
+        text-transform: uppercase;
+        font-weight: 600;
+        line-height: 7vw;
+        color: var(--cor-1);
+        text-shadow: 
+        -2px -2px 1px var(--cor-4), 
+        -2px 2px 1px  var(--cor-4),                    
+         2px -2px 1px  var(--cor-4),                  
+         2px 1px 1px  var(--cor-4);
+}
+
+/* --- INIT HIDDEN --- */
+
+.init-hidden-4 {
+
+}
+
+    
+/* FIM SEC 3 */
+@media (max-width: 950px) {
     /* -- WHATS ICON -- */
 .whatsapp-butoon {
     bottom: -10px;
@@ -475,16 +556,20 @@ html {
     /* FIM SEC 1 */
     /* SEC 2 */
 #sec2 {
-    height: 900px;
+    height: 1300px;
 }
     .text-box-sec2 {
         width: 90%;
-        align-items: center;
+        height: 10%;
+        align-items: flex-end;
     }
         .text-box-sec2 h2 {
             text-align: center;
+            font-size: 30px;
         }
-
+        .card-box-sec2 > img {
+            height: 300px;
+        }
     .card-box-sec2 {
         flex-direction: column;
         gap: 30px;
@@ -496,4 +581,65 @@ html {
         transition-delay: 0s;
     }
 /* FIM SEC 2 */
+/* SEC 3 */
+#sec3 {
+    height: 80vh;
+    width: 100vw;
+    background-size: 120vw;
+    flex-direction: column;
+}
+
+.left-side-sec3 {
+    height: 30%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+    .left-side-sec3 h3 {
+        font-size: 10vw;
+        margin-top: 0%;
+        margin-left: 0%;    
+    }
+    .left-side-sec3 h4 {
+        margin-right: 0;
+        text-align: center;
+        font-size: 9vw;
+        text-transform: uppercase;
+        line-height: 1em;
+        margin-left: 0%;
+        color: var(--cor-3);
+    }
+.right-side-sec3 {
+    height: 70%;
+    width: 100%;
+    justify-content: flex-start;
+}
+ 
+.right-side-sec3-box {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    color: var(--cor-3);
+    font-weight: 500;
+    font-size: 5vw;
+    line-height: 5vw;
+    margin-right: 0%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+    .class-span-right-2 img {
+        height: 15vw;
+    }
+    .class-span-right-3 {
+        font-weight: 700;
+    }
+
+    .class-span-right-1, .class-span-right-4 {
+        font-size: 13vw;
+        text-align: center;
+        line-height: 12vw;
+}
+   
 }
