--- a/style.css
+++ b/style.css
@@ -640,6 +640,8 @@ html {
         font-size: 13vw;
         text-align: center;
         line-height: 12vw;
-}
-   
+    }
+    .init-hidden-4 {
+        transform: translateX(25px) !important ;
+    }
 }
