--- a/style.css
+++ b/style.css
@@ -81,6 +81,41 @@ html {
     border-radius: 20px;
 }
 /* -- WHATS ICON -- */
+/* -- insta icon -- */
+.instagram-button {
+    position: fixed;
+    left: 0;
+    top: 70%;
+    z-index: 2;
+    background-color: var(--cor-4);
+    height: 50px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s;
+    transform: translateX(-140px);
+}
+.instagram-button:hover {
+    transition: all .4s;
+    transform: translateX(0px);
+    background-color: #3f729b;
+}
+.instagram-button a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--cor-1);
+    font-size: 15px;
+}
+.instagram-button a img {
+    height: 40px;
+    margin-right: 10px;
+}
+.instagram-button a span {
+    margin-left: 30px;
+}
+/* -- -- */
 /* NAV */
     .item-nav {
         font-weight: 500 !important;
@@ -436,14 +471,7 @@ html {
          2px -2px 1px  var(--cor-4),                  
          2px 1px 1px  var(--cor-4);
 }
-
-/* --- INIT HIDDEN --- */
-
-.init-hidden-4 {
-
-}
-
-    
+ 
 /* FIM SEC 3 */
 @media (max-width: 950px) {
     /* -- WHATS ICON -- */
