--- a/style.css
+++ b/style.css
@@ -47,6 +47,16 @@ body::-webkit-scrollbar-thumb {
         transform: scale(1.1);
     }
 }
+
+@keyframes spinloading {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
 /*---- FIM Key Frames animations ----*/
 /* Resets */
 * {
@@ -161,7 +171,13 @@ html {
                     }
                     .right-nav-item > a:active {
                         transform: scale(1);
-                    }           
+                    }     
+    
+    .item-nav-destaque {
+        background-color: var(--cor-3);
+        color: var(--cor-1) !important;
+        animation: whatsapp-animation 1s infinite alternate-reverse;
+    }
 /* FIM NAV */
 /* SEC 1 */ 
 .slide {
@@ -471,8 +487,116 @@ html {
          2px -2px 1px  var(--cor-4),                  
          2px 1px 1px  var(--cor-4);
 }
- 
 /* FIM SEC 3 */
+/*--- SEC 4 ---*/
+#sec5 {
+    height: 80vh;
+    width: 100vw;
+    background-color: var(--cor-1);
+    display: flex;
+    justify-content: center;
+}
+
+.content-sec5 {
+    background-color: var(--cor-3);
+    height: 100%;
+    width: 500px;
+}
+
+.box-content-sec5:nth-child(1) {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+    .box-content-sec5:nth-child(1)::after {
+        content: "";
+        position: absolute;
+        background-color: var(--cor-1);
+        height: 2px;
+        width: 90%;
+        bottom: 10%;
+    }
+.box-content-sec5:nth-child(1) h3 {
+    font-size: 25px;
+    color: var(--cor-1);
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    text-align: center;
+}
+.box-content-sec5:nth-child(1) p {
+    font-size: 20px;
+    color: var(--cor-1);
+    text-align: center;
+    text-transform: uppercase;
+}
+.box-content-sec5:nth-child(2) {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}    
+    .box-content-sec5:nth-child(2) > form {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        justify-content: center;
+    }
+        .box-content-sec5:nth-child(2) .input-item {
+            width: 60%;  
+            height: 40px;
+            padding: 10px;     
+            border: none;      
+            border-radius: 5px;
+            outline: none;
+            font-weight: bold;
+        }
+            .box-content-sec5:nth-child(2) .input-item:focus {
+                box-shadow: 2px 0px 30px -5px var(--cor-2);
+            }
+        .box-content-sec5:nth-child(2) .form-btn {
+            width: 60%;  
+            height: 40px;
+            padding: 15px;     
+            margin-top: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: var(--normal-t);
+            font-weight: bolder;
+            border: none;
+        }
+            .box-content-sec5:nth-child(2) .form-btn > img{
+                height: 29px;  
+                display: flex;
+                animation: spinloading 1s infinite;
+            }
+            .box-content-sec5:nth-child(2) .form-btn:hover {
+                transform: scale(1.05);
+                background-size: 500% 500%;
+                animation: gradient 3s ease alternate infinite;
+                border: transparent;
+                transition: var(--hover-t);
+            }
+.inputOutro{
+    display: none;
+}
+
+/* --- FIM SEC 5 --- */
+footer {
+    height: 100px;
+    width: 100%;
+    background-color: #000;
+}
 @media (max-width: 950px) {
     /* -- WHATS ICON -- */
 .whatsapp-butoon {
